<resources>
    <string name="app_name">Storage System</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">john@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">&#x2022;&#x2022;&#x2022;&#x2022;&#x2022;&#x2022;&#x2022;&#x2022;</string>
    <string name="scan">Scan</string>
    <string name="borrowed_items">Borrowed items</string>
    <string name="logout">Log out</string>
    <string name="camera_permission_required">Camera permission is required for the app to work</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_description">Before you proceed, you have to choose a new password.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="create_new_product">Create new product</string>
    <string name="update_product">Update product</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="barcode">Barcode</string>
    <string name="edit">Edit</string>
    <string name="product_image">Product image</string>
    <string name="barcode_label">Barcode: %s</string>
    <string name="image">Image</string>
    <string name="upload_image">Upload image</string>
    <string name="remove_image">Remove image</string>
    <string name="shelf_no">Shelf %d</string>
    <string name="items">Items</string>
    <string name="add_item">Add item</string>
    <string name="loaned_to">Loaned to: %s</string>
    <string name="delete">Delete</string>
    <string name="borrow">Borrow</string>
</resources>
